--- a/Resources/administration/index.html
+++ b/Resources/administration/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shopware\Core Administration WebPack Hot Reloading Server</title>
+    <title>Shopware Administration WebPack Hot Reloading Server</title>
 </head>
 <body>
     <div id="app"></div>
