NEXT-628 Fixed chunk sorting mode, so the dev server matches the production build

--- a/Resources/administration/index.html
+++ b/Resources/administration/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <div id="app"></div>
+    <script type="text/javascript">Shopware.Application.start();</script>
 </body>
 </html>
